major update, ISIC API has been changed, I modify the way to download data

--- a/skinlesiondatasets/Generate_HAMtestc.ipynb
+++ b/skinlesiondatasets/Generate_HAMtestc.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_50333/3219729908.py:21: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
+      "/tmp/ipykernel_4016341/25374647.py:22: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
       "  from scipy.ndimage.interpolation import map_coordinates\n"
      ]
     }
@@ -20,6 +20,7 @@
     "import os.path\n",
     "import time\n",
     "import torch\n",
+    "import tqdm\n",
     "import torchvision.datasets as dset\n",
     "import torchvision.transforms as trn\n",
     "import torch.utils.data as data\n",
@@ -43,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "HAMtestfolder = './SkinLesionDatasets/HAMtest/'\n",
-    "HAMtestcpath = './SkinLeisionDatasets_C/'"
+    "HAMtestcpath = './SkinLesionDatasets_C/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +645,37 @@
       "gaussian_noise 2\n",
       "gaussian_noise 3\n",
       "gaussian_noise 4\n",
-      "gaussian_noise 5\n"
+      "gaussian_noise 5\n",
+      "shot_noise 1\n",
+      "shot_noise 2\n",
+      "shot_noise 3\n",
+      "shot_noise 4\n",
+      "shot_noise 5\n",
+      "impulse_noise 1\n",
+      "impulse_noise 2\n",
+      "impulse_noise 3\n",
+      "impulse_noise 4\n",
+      "impulse_noise 5\n",
+      "defocus_blur 1\n",
+      "defocus_blur 2\n",
+      "defocus_blur 3\n",
+      "defocus_blur 4\n",
+      "defocus_blur 5\n",
+      "glass_blur 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
+      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
+      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n",
+      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n"
      ]
     }
    ],
@@ -686,13 +717,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skinclassifer",
+   "display_name": "skinclassifier",
    "language": "python",
-   "name": "skinclassifer"
+   "name": "skinclassifier"
   },
   "language_info": {
    "codemirror_mode": {
