--- a/skinlesiondatasets/MakeD7Pdataset.ipynb
+++ b/skinlesiondatasets/MakeD7Pdataset.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,40 +47,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1011/1011 [00:18<00:00, 56.12it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████| 1011/1011 [00:15<00:00, 66.08it/s]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "for count in tqdm(range(len(diagnosis))):\n",
     "#     print(count)\n",
     "    \n",
     "    diagnosisinfo = diagnosis[count]\n",
-    "        \n",
+    "    \n",
+    "    flag = 0\n",
     "    if diagnosisinfo[-5:] == 'nevus':\n",
-    "        outputfolder = D7Pdatafold + 'nevus'\n",
-    "    elif diagnosisinfo[:8] == 'melanoma':\n",
-    "        outputfolder = D7Pdatafold + 'melanoma'\n",
-    "    else:\n",
-    "        outputfolder = D7Pdatafold + diagnosisinfo\n",
+    "        outputfolder = D7Pdatafold + 'nv'\n",
+    "        flag = 1\n",
+    "    if diagnosisinfo[:8] == 'melanoma':\n",
+    "        outputfolder = D7Pdatafold + 'mel'\n",
+    "        flag = 1\n",
+    "    if diagnosisinfo == 'dermatofibroma':\n",
+    "        outputfolder = D7Pdatafold + 'df'\n",
+    "        flag = 1\n",
+    "    if diagnosisinfo == 'basal cell carcinoma':\n",
+    "        outputfolder = D7Pdatafold + 'bcc'\n",
+    "        flag = 1\n",
+    "    if diagnosisinfo == 'seborrheic keratosis':\n",
+    "        outputfolder = D7Pdatafold + 'bkl'\n",
+    "        flag = 1\n",
+    "    if diagnosisinfo == 'vascular lesion':\n",
+    "        outputfolder = D7Pdatafold + 'vasc'\n",
+    "        flag = 1\n",
     "    \n",
-    "    if os.path.isdir(outputfolder) == False:\n",
-    "        os.makedirs(outputfolder)\n",
-    "    \n",
-    "    src1 = D7Pdownload + 'release_v0/images/' + file1name[count]\n",
-    "    dst1 = outputfolder + '/' + file1name[count][4:]\n",
-    "    shutil.copyfile(src1, dst1)\n",
-    "        \n",
-    "    src2 = D7Pdownload + 'release_v0/images/' + file2name[count]\n",
-    "    dst2 = outputfolder + '/' + file2name[count][4:]\n",
-    "    shutil.copyfile(src2, dst2)"
+    "    if flag == 1:\n",
+    "        if os.path.isdir(outputfolder) == False:\n",
+    "            os.makedirs(outputfolder)\n",
+    "\n",
+    "        src1 = D7Pdownload + 'release_v0/images/' + file1name[count]\n",
+    "        dst1 = outputfolder + '/' + file1name[count][4:]\n",
+    "        shutil.copyfile(src1, dst1)\n",
+    "\n",
+    "        src2 = D7Pdownload + 'release_v0/images/' + file2name[count]\n",
+    "        dst2 = outputfolder + '/' + file2name[count][4:]\n",
+    "        shutil.copyfile(src2, dst2)"
    ]
   },
   {
@@ -89,6 +104,26 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'melanoma'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diagnosisinfo"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,9 +135,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IW",
+   "display_name": "skinclassifier",
    "language": "python",
-   "name": "iw"
+   "name": "skinclassifier"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
