--- a/skinlesiondatasets/MakePH2dataset.ipynb
+++ b/skinlesiondatasets/MakePH2dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████| 220/220 [00:50<00:00,  4.33it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████| 220/220 [00:31<00:00,  6.99it/s]\n"
      ]
     }
    ],
@@ -66,9 +66,9 @@
     "        continue\n",
     "    \n",
     "    if diagnosisinfo == '0' or diagnosisinfo == '1':\n",
-    "        outputfolder = PH2datafold + 'nevus'\n",
+    "        outputfolder = PH2datafold + 'nv'\n",
     "    if diagnosisinfo == '2':\n",
-    "        outputfolder = PH2datafold + 'melanoma'\n",
+    "        outputfolder = PH2datafold + 'mel'\n",
     "    \n",
     "    if os.path.isdir(outputfolder) == False:\n",
     "        os.makedirs(outputfolder)\n",
@@ -118,9 +118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IW",
+   "display_name": "skinclassifier",
    "language": "python",
-   "name": "iw"
+   "name": "skinclassifier"
   },
   "language_info": {
    "codemirror_mode": {
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
