--- a/skinlesiondatasets/SplitHAMtrainval.ipynb
+++ b/skinlesiondatasets/SplitHAMtrainval.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['melanoma', 'nevus', 'basal cell carcinoma', 'vascular lesion', 'actinic keratosis', 'dermatofibroma', 'pigmented benign keratosis']\n"
+      "['mel', 'bcc', 'akiec', 'df', 'vasc', 'bkl', 'nv']\n"
      ]
     }
    ],
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [02:28<00:00, 21.17s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 7/7 [01:06<00:00,  9.54s/it]\n"
      ]
     }
    ],
@@ -107,9 +107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IW",
+   "display_name": "skinclassifier",
    "language": "python",
-   "name": "iw"
+   "name": "skinclassifier"
   },
   "language_info": {
    "codemirror_mode": {
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
