--- a/skinlesiondatasets/Generate_HAMtestc.ipynb
+++ b/skinlesiondatasets/Generate_HAMtestc.ipynb
@@ -677,6 +677,27 @@
       "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "glass_blur 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
+      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
+      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n",
+      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n"
+     ]
     }
    ],
    "source": [
