test the sythesized functions

--- a/skinlesiondatasets/Generate_HAMtestc.ipynb
+++ b/skinlesiondatasets/Generate_HAMtestc.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4016341/25374647.py:22: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
+      "/vol/biomedic2/zl9518/anaconda3/envs/skinclassifier/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/tmp/ipykernel_63598/25374647.py:22: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
       "  from scipy.ndimage.interpolation import map_coordinates\n"
      ]
     }
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -641,62 +643,141 @@
      "text": [
       "\n",
       "Using HAM test data\n",
-      "gaussian_noise 1\n",
-      "gaussian_noise 2\n",
-      "gaussian_noise 3\n",
-      "gaussian_noise 4\n",
-      "gaussian_noise 5\n",
-      "shot_noise 1\n",
-      "shot_noise 2\n",
-      "shot_noise 3\n",
-      "shot_noise 4\n",
-      "shot_noise 5\n",
-      "impulse_noise 1\n",
-      "impulse_noise 2\n",
-      "impulse_noise 3\n",
-      "impulse_noise 4\n",
-      "impulse_noise 5\n",
-      "defocus_blur 1\n",
-      "defocus_blur 2\n",
-      "defocus_blur 3\n",
-      "defocus_blur 4\n",
-      "defocus_blur 5\n",
-      "glass_blur 1\n"
+      "frost 1\n",
+      "frost 2\n",
+      "frost 3\n",
+      "frost 4\n",
+      "frost 5\n",
+      "fog 1\n",
+      "fog 2\n",
+      "fog 3\n",
+      "fog 4\n",
+      "fog 5\n",
+      "brightness 1\n",
+      "brightness 2\n",
+      "brightness 3\n",
+      "brightness 4\n",
+      "brightness 5\n",
+      "contrast 1\n",
+      "contrast 2\n",
+      "contrast 3\n",
+      "contrast 4\n",
+      "contrast 5\n",
+      "elastic_transform 1\n",
+      "elastic_transform 2\n",
+      "elastic_transform 3\n",
+      "elastic_transform 4\n",
+      "elastic_transform 5\n",
+      "pixelate 1\n",
+      "pixelate 2\n",
+      "pixelate 3\n",
+      "pixelate 4\n",
+      "pixelate 5\n",
+      "jpeg_compression 1\n",
+      "jpeg_compression 2\n",
+      "jpeg_compression 3\n",
+      "jpeg_compression 4\n",
+      "jpeg_compression 5\n",
+      "speckle_noise 1\n",
+      "speckle_noise 2\n",
+      "speckle_noise 3\n",
+      "speckle_noise 4\n",
+      "speckle_noise 5\n",
+      "gaussian_blur 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
-      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
-      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n",
-      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n"
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "glass_blur 2\n"
+      "gaussian_blur 2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
-      "/tmp/ipykernel_4016341/3998320385.py:279: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = np.uint8(gaussian(np.array(x) / 255., sigma=c[0], multichannel=True) * 255)\n",
-      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n",
-      "/tmp/ipykernel_4016341/3998320385.py:290: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n"
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gaussian_blur 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gaussian_blur 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gaussian_blur 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spatter 1\n",
+      "spatter 2\n",
+      "spatter 3\n",
+      "spatter 4\n",
+      "spatter 5\n",
+      "saturate 1\n",
+      "saturate 2\n",
+      "saturate 3\n",
+      "saturate 4\n",
+      "saturate 5\n"
      ]
     }
    ],
