--- a/skinlesiondatasets/Generate_HAMtestc.ipynb
+++ b/skinlesiondatasets/Generate_HAMtestc.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/vol/biomedic2/zl9518/anaconda3/envs/skinclassifier/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/tmp/ipykernel_63598/25374647.py:22: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/25374647.py:22: DeprecationWarning: Please use `map_coordinates` from the `scipy.ndimage` namespace, the `scipy.ndimage.interpolation` namespace is deprecated.\n",
       "  from scipy.ndimage.interpolation import map_coordinates\n"
      ]
     }
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +622,8 @@
     "            root=HAMtestfolder,\n",
     "            method=method, severity=severity)\n",
     "        distorted_dataset_loader = torch.utils.data.DataLoader(\n",
-    "            distorted_dataset, batch_size=100, shuffle=False, num_workers=2)\n",
+    "            distorted_dataset, batch_size=100, shuffle=False, num_workers=1)\n",
+    "        # note that, num_workers might need to be set to 1, to avoid the duplicated error of os.makedirs\n",
     "\n",
     "        for _ in distorted_dataset_loader: continue\n",
     "\n",
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -643,21 +642,6 @@
      "text": [
       "\n",
       "Using HAM test data\n",
-      "frost 1\n",
-      "frost 2\n",
-      "frost 3\n",
-      "frost 4\n",
-      "frost 5\n",
-      "fog 1\n",
-      "fog 2\n",
-      "fog 3\n",
-      "fog 4\n",
-      "fog 5\n",
-      "brightness 1\n",
-      "brightness 2\n",
-      "brightness 3\n",
-      "brightness 4\n",
-      "brightness 5\n",
       "contrast 1\n",
       "contrast 2\n",
       "contrast 3\n",
@@ -690,9 +674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/3899939079.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
@@ -707,9 +689,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/3899939079.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
@@ -724,9 +704,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/3899939079.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
@@ -741,9 +719,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/3899939079.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
@@ -758,9 +734,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
-      "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
-      "/tmp/ipykernel_63598/3998320385.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
+      "/tmp/slurm-32263731/ipykernel_85535/3899939079.py:267: FutureWarning: `multichannel` is a deprecated argument name for `gaussian`. It will be removed in version 1.0.Please use `channel_axis` instead.\n",
       "  x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n"
      ]
     },
@@ -795,7 +769,7 @@
     "d['Glass Blur'] = glass_blur\n",
     "d['Motion Blur'] = motion_blur\n",
     "d['Zoom Blur'] = zoom_blur\n",
-    "d['Snow'] = snow\n",
+    "# d['Snow'] = snow\n",
     "d['Frost'] = frost\n",
     "d['Fog'] = fog\n",
     "d['Brightness'] = brightness\n",
@@ -844,9 +818,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
