--- a/skinlesiondatasets/SplitHAMtrainval.ipynb
+++ b/skinlesiondatasets/SplitHAMtrainval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,29 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "HAMdatafold = './SkinLesionDatasets/HAM/'\n",
     "HAMtraindatafold = './SkinLesionDatasets/HAMtrain/'\n",
+    "HAMvaldatafold = './SkinLesionDatasets/HAMval/'\n",
     "HAMtestdatafold = './SkinLesionDatasets/HAMtest/'\n",
     "if os.path.isdir(HAMtraindatafold) == False:\n",
     "    os.makedirs(HAMtraindatafold)\n",
+    "if os.path.isdir(HAMvaldatafold) == False:\n",
+    "    os.makedirs(HAMvaldatafold)\n",
     "if os.path.isdir(HAMtestdatafold) == False:\n",
     "    os.makedirs(HAMtestdatafold)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mel', 'bcc', 'akiec', 'df', 'vasc', 'bkl', 'nv']\n"
+      "['bcc', 'mel', 'bkl', 'nv', 'vasc', 'df', 'akiec']\n"
      ]
     }
    ],
@@ -50,37 +53,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 7/7 [01:06<00:00,  9.54s/it]\n"
+      "100%|████████████████████████████████████████████████████████████| 7/7 [01:33<00:00, 13.32s/it]\n"
      ]
     }
    ],
    "source": [
     "trainportion = 0.7\n",
+    "valportion = 0.8\n",
+    "random.seed(79)\n",
     "for clscount in tqdm(range(len(existingfolders))):\n",
     "    clsfolder = HAMdatafold + existingfolders[clscount]\n",
     "    clstrainfolder = HAMtraindatafold + existingfolders[clscount]\n",
+    "    clsvalfolder = HAMvaldatafold + existingfolders[clscount]\n",
     "    clstestfolder = HAMtestdatafold + existingfolders[clscount]\n",
-    "    existingfiles = os.listdir(clsfolder)\n",
+    "    existingfiles = sorted(os.listdir(clsfolder))\n",
     "    numlist = list(range(len(existingfiles)))\n",
     "    random.shuffle(numlist)\n",
     "    trainlist = numlist[:int(np.round(trainportion * len(existingfiles)))]\n",
-    "    testlist = numlist[int(np.round(trainportion * len(existingfiles))):]\n",
+    "    vallist = numlist[int(np.round(trainportion * len(existingfiles))):int(np.round(valportion * len(existingfiles)))]\n",
+    "    testlist = numlist[int(np.round(valportion * len(existingfiles))):]\n",
     "    \n",
     "    if os.path.isdir(clstrainfolder) == False:\n",
     "        os.makedirs(clstrainfolder)\n",
+    "    if os.path.isdir(clsvalfolder) == False:\n",
+    "        os.makedirs(clsvalfolder)\n",
     "    if os.path.isdir(clstestfolder) == False:\n",
     "        os.makedirs(clstestfolder)\n",
     "    \n",
     "    for ktrain in trainlist:\n",
     "        src = clsfolder + '/' + existingfiles[ktrain]\n",
     "        dst = clstrainfolder + '/' + existingfiles[ktrain]\n",
+    "        shutil.copyfile(src, dst)\n",
+    "\n",
+    "    for kval in vallist:\n",
+    "        src = clsfolder + '/' + existingfiles[kval]\n",
+    "        dst = clsvalfolder + '/' + existingfiles[kval]\n",
     "        shutil.copyfile(src, dst)\n",
     "    \n",
     "    for ktest in testlist:\n",
@@ -89,13 +103,6 @@
     "        shutil.copyfile(src, dst)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -121,9 +128,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
