update the real inference results

--- a/HAMtest.ipynb
+++ b/HAMtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# this is not very elegant, but should work.\n",
     "ckpt_toload = dict()\n",
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +100,11 @@
     "train_dataset = datasets.ImageFolder(root=os.path.join(data_folder, 'HAMtrain'), transform=transform_val)\n",
     "#\n",
     "val_dataset = datasets.ImageFolder(root=os.path.join(data_folder, 'HAMval'), transform=transform_val)\n",
-    "val_dataset.class_to_idx = train_dataset.class_to_idx\n",
     "val_loader = torch.utils.data.DataLoader(\n",
     "        val_dataset, batch_size=1, shuffle=False,\n",
     "        num_workers=0, pin_memory=True)\n",
     "#\n",
     "test_dataset = datasets.ImageFolder(root=os.path.join(data_folder, 'HAMtest'), transform=transform_val)\n",
-    "test_dataset.class_to_idx = train_dataset.class_to_idx\n",
     "test_loader = torch.utils.data.DataLoader(\n",
     "        test_dataset, batch_size=1, shuffle=False,\n",
     "        num_workers=0, pin_memory=True)"
@@ -103,7 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_to_idx = train_dataset.class_to_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 1002/1002 [00:30<00:00, 32.51it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "cifarresultsdir = './skinresults/'\n",
     "model.eval()\n",
@@ -129,7 +155,12 @@
     "    input = input.cuda(gpu, non_blocking = True)\n",
     "    logits_test = model(input)\n",
     "    preds_test = F.softmax(logits_test, dim = 1)\n",
-    "    targets_test = F.one_hot(target, num_classes = num_classes)\n",
+    "    #\n",
+    "    dtarget = target.cpu().detach().numpy()[0]\n",
+    "    targetname = list(val_dataset.class_to_idx.keys())[list(val_dataset.class_to_idx.values()).index(dtarget)]\n",
+    "    traincls = class_to_idx[targetname]\n",
+    "    targets_test = F.one_hot(torch.tensor([traincls], dtype=torch.int8).long(), num_classes = num_classes)\n",
+    "    #\n",
     "    logits.append(logits_test.cpu().detach())\n",
     "    preds.append(preds_test.cpu().detach())\n",
     "    targets.append(targets_test)\n",
@@ -147,9 +178,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset BCN\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████| 12413/12413 [07:52<00:00, 26.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset D7P\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 1923/1923 [01:03<00:00, 30.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset MSK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 3540/3540 [08:48<00:00,  6.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset OTH\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 8201/8201 [14:48<00:00,  9.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset PH2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████| 200/200 [00:07<00:00, 25.09it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset UDA\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████| 613/613 [00:37<00:00, 16.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset VIE\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████| 4374/4374 [03:52<00:00, 18.81it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Other datasets here\n",
     "datasetlist = ['BCN', 'D7P', 'MSK', 'OTH', 'PH2', 'UDA', 'VIE']\n",
@@ -162,8 +292,6 @@
     "    csvsavename = 'predictions_test_' + datasetn +  '.csv'\n",
     "    \n",
     "    val_dataset = datasets.ImageFolder(root=os.path.join(data_folder, datasetn), transform=transform_val)\n",
-    "\n",
-    "    val_dataset.class_to_idx = train_dataset.class_to_idx\n",
     "    \n",
     "    val_loader = torch.utils.data.DataLoader(\n",
     "            val_dataset, batch_size=1, shuffle=False,\n",
@@ -176,7 +304,12 @@
     "        input = input.cuda(gpu, non_blocking = True)\n",
     "        logits_test = model(input)\n",
     "        preds_test = F.softmax(logits_test, dim = 1)\n",
-    "        targets_test = F.one_hot(target, num_classes = num_classes)\n",
+    "        #\n",
+    "        dtarget = target.cpu().detach().numpy()[0]\n",
+    "        targetname = list(val_dataset.class_to_idx.keys())[list(val_dataset.class_to_idx.values()).index(dtarget)]\n",
+    "        traincls = class_to_idx[targetname]\n",
+    "        targets_test = F.one_hot(torch.tensor([traincls], dtype=torch.int8).long(), num_classes = num_classes)\n",
+    "        #\n",
     "        logits.append(logits_test.cpu().detach())\n",
     "        preds.append(preds_test.cpu().detach())\n",
     "        targets.append(targets_test)\n",
@@ -216,12 +349,10 @@
     "    for severityindex in severitylist:\n",
     "    \n",
     "        print('Processing dataset ' + datasetn + ' severity ' + str(severityindex))\n",
-    "\n",
+    "    \n",
     "        csvsavename = 'predictions_test_' + datasetn + '_' + str(severityindex) + '.csv'\n",
     "\n",
     "        val_dataset = datasets.ImageFolder(root=os.path.join(data_folder, datasetn, str(severityindex)), transform=transform_val)\n",
-    "        \n",
-    "        val_dataset.class_to_idx = train_dataset.class_to_idx\n",
     "\n",
     "        val_loader = torch.utils.data.DataLoader(\n",
     "                val_dataset, batch_size=1, shuffle=False,\n",
@@ -234,7 +365,12 @@
     "            input = input.cuda(gpu, non_blocking = True)\n",
     "            logits_test = model(input)\n",
     "            preds_test = F.softmax(logits_test, dim = 1)\n",
-    "            targets_test = F.one_hot(target, num_classes = num_classes)\n",
+    "            #\n",
+    "            dtarget = target.cpu().detach().numpy()[0]\n",
+    "            targetname = list(val_dataset.class_to_idx.keys())[list(val_dataset.class_to_idx.values()).index(dtarget)]\n",
+    "            traincls = class_to_idx[targetname]\n",
+    "            targets_test = F.one_hot(torch.tensor([traincls], dtype=torch.int8).long(), num_classes = num_classes)\n",
+    "            #\n",
     "            logits.append(logits_test.cpu().detach())\n",
     "            preds.append(preds_test.cpu().detach())\n",
     "            targets.append(targets_test)\n",
